# 1337-NLP

./: .pre-commit-config.yaml  main.py  pyproject.toml
core_nlp/: .pre-commit-config.yaml  pyproject.toml
core_nlp/examples/: morph_analyzer.py
core_nlp/src/: dataloader.py  engine.py  exceptions.py
core_nlp/tests/: test_dataloader.py
core_nlp/tokenization/src/: __init__.py  argparser.py  error_messages.py  exceptions.py  playground.ipynb  word_tokenize.py
core_nlp/tokenization/tests/: test_word_tokenize.py
